updated at: 2023-07-31 23:31, ラジオチャットをボイスチャットに流し込むのを助けるツール - Haruqaのソフトウェアとか - BOOTH

--- a/VRChat/19/1272719.html
+++ b/VRChat/19/1272719.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "wsVM16sifhgfGHG+zyikz74835LViuAjlA5JPDFZnmY="></script>
+    "p9kSwkIuk/wOwtAPX3O3dwNCe9GwoKw7EK9uPd9a0fI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ラジオチャットをボイスチャットに流し込むのを助けるツール","description":"VRChat等ボイスチャットしかない環境でラジオチャットみたいに定型文コミュニケーションできるようにしたいなあと考えて作成しました。\n音声なら何でも流せてしまうので、このツールで荒らし行為等行われないよう有料商品とさせていただきました。\n\n他、HaruqaのFF内の方は、「Haruqaポイント」が使用できます。\nhttps://docs.google.com/spreadsheets/d/12bNyV3DBfgwP6qSopWHrduxU2KFnX7LDvI91MHP7mzE/edit?usp=sharing","url":"https://booth.pm/ja/items/1272719","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"100","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/d5a2a7c6-8511-46b8-b926-701687fd1c07/i/1272719/904be52d-0fb9-43f7-b564-32cd87cb274b_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="wsVM16sifhgfGHG+zyikz74835LViuAjlA5JPDFZnmY="></script>
+    nonce="p9kSwkIuk/wOwtAPX3O3dwNCe9GwoKw7EK9uPd9a0fI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -853,9 +853,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
