--- a/VRChat/02/1272902.html
+++ b/VRChat/02/1272902.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "LYXehctqmzPu0BdIe6kD9Lsb7MmdV+ymP8Gf8IeNwvQ="></script>
+    "Dx95bFhhdEPk5Hkl6H7darrxSPmPEElJb6v5Dgy0iSg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ブルパップ式コイルガン [HN-W-001\"Magnetit\"]","description":"---説明---\n\nVRChatでの仕様を想定した、ブルパップ式のコイルガンです。\nストック、マガジンの着脱が可能です。\n\nUnitypackageの方はマテリアルなどの設定を済ませてあります。\n\n\n\n---利用規約---\n\n1,本モデルの再配布、販売を禁止します。\n\n2,本モデルを他者への誹謗中傷目的に用いることを禁止します。\n\n3,以上のことを遵守したあらゆる活動において、本モデルを自由に使用することを許可します。\n\n--------------\n\n\n\nその他、不明な点等ございましたら以下に連絡ください。\n\nTwitter:@kirihama_kanmen\n\n\n","url":"https://booth.pm/ja/items/1272902","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/b1d40e68-0591-47f4-ac06-1d0df4c9cba5/i/1272902/aad230aa-44cf-41a6-81b2-349c3a508a87_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="LYXehctqmzPu0BdIe6kD9Lsb7MmdV+ymP8Gf8IeNwvQ="></script>
+    nonce="Dx95bFhhdEPk5Hkl6H7darrxSPmPEElJb6v5Dgy0iSg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -361,9 +361,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
