--- a/VRChat/70/1272570.html
+++ b/VRChat/70/1272570.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "TWTil+gfO3av5a88KThRFYO0BmeQjjEuZb4/8UKfWKw="></script>
+    "oC4KUX8rvEOZywVH3CxNTwtu3qU4SnujqsEOWz5EbiU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"３Dモデル　縁切り鋏【無料】","description":"オリジナル３Dモデル【縁切り鋏】紹介文\n\n大型の鋏モチーフの刀「縁切り鋏」です、\n大型の刃が斬るものは人との絆である、\n\n…みたいなイメージの元作成されたモデルです\n使用するための利用規則はほとんどなく\n誰にでも使用していただけるモデルです\n\n同封している単色テクスチャはShadowMatcapcolorに入れることでチタンのような色に変更することができます\n\n【注釈】\nこの鋏はあくまで名称であり人との縁切りを促すものではありません","url":"https://booth.pm/ja/items/1272570","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/2ba89119-a30f-412c-b54c-ef71ff74a421/i/1272570/5d38462a-4b7e-4158-9e23-54037f5c7680_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="TWTil+gfO3av5a88KThRFYO0BmeQjjEuZb4/8UKfWKw="></script>
+    nonce="oC4KUX8rvEOZywVH3CxNTwtu3qU4SnujqsEOWz5EbiU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -473,9 +473,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
