updated at: 2023-07-31 23:32, 手の３ｄモデル - tacoika - BOOTH

--- a/VRChat/17/1272517.html
+++ b/VRChat/17/1272517.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "sEy9sor87WQiBn+gYoii+1Ja2MN7NEG7QFlFcO6EHj4="></script>
+    "F6q31Fdlmw50RbE75Z1d+nouJppHgez1vpUvx3IgFSU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"手の３ｄモデル","description":"△979\n\n内容\n手の3dモデル（fbx）、テクスチャ３種（png）、readme\nVRchat・MMDでの利用可\n商用利用可（再配布のみ禁止）\n\n成人男性の手のモデルデータです。\nテクスチャが３種類（肌色・青肌・グレースケール）付属しています。グレースケールにオーバーレイをかけることで、お使いのアバターの肌の色にあわせることが可能です。\n\n画像にもある通り、動きをつけることはあまり想定してしません。用途に合わせてお買い求めください。\n\nfbxは右手のものなので反転コピーして左手を錬成してください。","url":"https://booth.pm/ja/items/1272517","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/602fbacb-0d72-4af8-a5fd-519a90b362d7/i/1272517/293087b9-17f5-4dcb-ad9e-00a65d45a098_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="sEy9sor87WQiBn+gYoii+1Ja2MN7NEG7QFlFcO6EHj4="></script>
+    nonce="F6q31Fdlmw50RbE75Z1d+nouJppHgez1vpUvx3IgFSU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -420,9 +420,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
