--- a/VRChat/42/1270942.html
+++ b/VRChat/42/1270942.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "+GeY8m72sia9cL5dZ+wLH0CmXd+t7VNIxBkhdH1Vpw0="></script>
+    "NimP4Y5YhEenv2l+S/mnRRUQzblvt8T3sTG5uHHksQA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"GPWeaponsバージョン01","description":"きまぐれで生まれた武器セット\n欲しかったアノ武器（バズーカ・フリントロック式・ホビーピストル・ガトリングなど）を詰めたものでございます！\n\n現在まだ、モデル単体のみが入っている状況ではありますが、後ほど動きなどの梱包をしようかと検討していますのでお楽しみに。\n\nGPの素体に持たせてやってくださるとゆづきちが喜びます。","url":"https://booth.pm/ja/items/1270942","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/a446d8f7-127d-4117-a58c-d29e74abf52f/i/1270942/74db5b6f-7466-44c7-bd21-d189306e6e26_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="+GeY8m72sia9cL5dZ+wLH0CmXd+t7VNIxBkhdH1Vpw0="></script>
+    nonce="NimP4Y5YhEenv2l+S/mnRRUQzblvt8T3sTG5uHHksQA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -428,9 +428,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
