--- a/VRChat/39/1271739.html
+++ b/VRChat/39/1271739.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "9TIRO+Bp2Sot/ilsGtrRJoocJFxDv0j7IT/QsHefpJ0="></script>
+    "03iMpc+L9GITA8k03laQgzUcUUdSAv2M8hb0F1VKTRk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"素体三セット　GPレイナ・GPセンカ・GPリツキ","description":"フィギュアのようなBODYで、人の心を持つ存在。\nそういったものを求めた結果生まれたGP（GirlPrincess）達。\n顔や胴体をバラして自分の好きな形にすることや、他のショップの髪パーツを付けることでオリジナルな素体を仕上げよう！\n\n","url":"https://booth.pm/ja/items/1271739","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/a446d8f7-127d-4117-a58c-d29e74abf52f/i/1271739/85f372d9-07eb-41b3-bd1f-72dae2d39da7_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="9TIRO+Bp2Sot/ilsGtrRJoocJFxDv0j7IT/QsHefpJ0="></script>
+    nonce="03iMpc+L9GITA8k03laQgzUcUUdSAv2M8hb0F1VKTRk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -352,9 +352,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
