--- a/VRChat/63/1270863.html
+++ b/VRChat/63/1270863.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "1r6u5L76a5ePnXEhH4VHK4+eqyfAkZEFrXqWHKSeCo0="></script>
+    "qgg7yRI8U7Z1BzjOOOVAhP8CxQ/TkImCmgXL+g7T6NY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"セフィが頭に付けてるスチームパンクゴーグル ver1.1.0","description":"僕が売っているモデル、セフィが頭につけてるスチームパンク風味のゴーグルです。\n　かけられるタイプのゴーグルが好きなのになぜか誰もつけている人がいませんでした。変だなと思っていたのですが、「作るのが死ぬほど面倒だから」ということが発覚し、なら配布すっかということにしました。そういう経緯です。好きに使ってください。\nなお、セフィにはまったく同じゴーグルが付属しているので、セフィを買ってくださった方は買わなくても大丈夫です。\n\n一応投げ銭もできます。してくれたら僕が次のモデルも頑張って作ります。\n\n改造したものかどうかに限らず、再配布OKです。\nただし、できれば僕にデータを下さい。ほしいので。\n再配布にあたり、金銭のやり取りの発生することは全面的に禁止とします。\nこれを付けての配信、動画制作、登場するゲームを作る、すべて可能です。それによって得た金銭を請求することはありません。\nこの規約はのちに変更される可能性があります。\n\n\nこのモデルに関しての苦情などは、基本的に受け付けていません。ご了承ください。\n\n追記：マットキャップ画像入れ忘れてたんで追加しました。\n\n追追記：ゴーグルのベルト部分にボーンを入れて調整しやすくしました。","url":"https://booth.pm/ja/items/1270863","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/0d2468c0-1ae0-44e4-9281-c6f1646d3f41/i/1270863/326308e2-fa61-4982-ad05-183f6f1be0c3_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="1r6u5L76a5ePnXEhH4VHK4+eqyfAkZEFrXqWHKSeCo0="></script>
+    nonce="qgg7yRI8U7Z1BzjOOOVAhP8CxQ/TkImCmgXL+g7T6NY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -486,9 +486,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
