--- a/VRChat/28/1270728.html
+++ b/VRChat/28/1270728.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "iOlyLXvOqEPJ6Z2Z3i5Kc7d6NPL2YvR862V9x4ubdKo="></script>
+    "XKeXweNnDBdStEi6Uns8SW6Nh4DDtmugswF/RnBOS6k="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"初心者、高齢者マークセット","description":"無料配布している初心者マークのほかに\n\n・過去に作った初心者マーク２種類\n・サブスタでも色をいじりやすくした最新版\n・高齢者マーク（新、旧）\n\nをいれました\n規約は無料版と変わらないので、そちらを参照してください\n\nアクセサリーとして使うもよし、初心者マークでアバターを作るでもよし\nいろいろな使い方があるので、ぜひ自分だけのマークの使い方を見つけてください","url":"https://booth.pm/ja/items/1270728","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/ad349ea1-c320-473c-933d-01a50c9c733f/i/1270728/b5191668-7ff4-4cf2-8b4e-4ac3f47fe9c2_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="iOlyLXvOqEPJ6Z2Z3i5Kc7d6NPL2YvR862V9x4ubdKo="></script>
+    nonce="XKeXweNnDBdStEi6Uns8SW6Nh4DDtmugswF/RnBOS6k="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -435,9 +435,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
