updated at: 2023-07-31 23:42, オリジナル3Dモデル『ルナレッタ』単品 (人間ver / 獣人ver) - konoe-BOOTH - BOOTH

--- a/VRChat/82/1260482.html
+++ b/VRChat/82/1260482.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "rtMmpk2qyTUVaycApeEeWv4QLGKpnIMY1WLUVzPwaRc="></script>
+    "553oR8vbfrdK/8UwPBxlwiNKaNl0O4VAZbbN3ZMpUC0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル『ルナレッタ』単品 (人間ver / 獣人ver)","description":"こちらはアバター単品販売のページです。\n『ルナレッタ(人間ver)』もしくは『ルナレッタ(獣人ver)』をお選びください。\n\n両方のモデル、もしくは変身ギミックありのモデルを購入されたい場合は『ルナレッタ(変身セット)』をご購入ください。\n\n\n\n本モデルはUnityのHumanoid形式に対応した3Dモデルとなっております。\n【ご注意】\nこのパッケージはVRChatのSDK2(avatars2.0)向けに設定したものです。以降のバージョンに対応させる場合はご自身での設定が必要となりますのでご了承の上ご購入ください。\n\n＜内容物＞\n(両バージョン構成は同じです。モデルのみ異なります)\n・unitypackageファイル\n・blend形式およびfbx形式モデルデータ\n  (fbx形式はテクスチャ未設定)\n・テクスチャ画像\n・psd形式改変用テクスチャ画像\n・サンプル表情アニメーション\n\n\n＜利用規約＞\n動画やゲーム、アプリにおける本モデルの利用は商用を含めて可能です。\nモデル自体の再配布、販売を禁止します。\n(ゲーム等の公開の際、暗号化していないフォルダに入れるなど\nモデルデータとして再度使用できる状態での配布・販売はおやめください)\nモデルの改変は公序良俗に反するものでなければご自由に行ってください。\n\nVRChatへのアップロードにて購入者ご本人のみが使用する場合は再配布と捉えないものとします。\nアバターペデスタルやCloning機能など他人が使用できる状態にすることはご遠慮ください。\n\n\n2019/03/16　不具合修正しました(Ver1.01)\n・獣人単品モデル\n表情発動時に体のメッシュがはみ出る、動いた際に服(首の前掛け)のメッシュ裏がはみ出る、表情LunaSmileFの設定ミス　を修正\n2019/03/08　販売開始しました　(Ver1.00)","url":"https://booth.pm/ja/items/1260482","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"3000","highPrice":"3000"},"image":"https://booth.pximg.net/c/620x620/b58bbbf9-f493-4b3f-87ba-a69d30c4b84f/i/1260482/135317bb-538d-4fcf-a0d1-73b820dea5c7_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="rtMmpk2qyTUVaycApeEeWv4QLGKpnIMY1WLUVzPwaRc="></script>
+    nonce="553oR8vbfrdK/8UwPBxlwiNKaNl0O4VAZbbN3ZMpUC0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -615,9 +615,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
