updated at: 2023-07-31 23:43, VOXEL Helicopter - Tiger - VOXWAD - BOOTH

--- a/VRChat/91/1265091.html
+++ b/VRChat/91/1265091.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "FZKwMU8ojVkzbOJUpYJKPHlEjDZuhV3vJRgE294tfLk="></script>
+    "QsHhOpF9vn2JPdy6WIss1wZ3xJxw3k3hOHxquUizbIw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VOXEL Helicopter - Tiger","description":"[JP]\nVoxel Helicopter - Tiger\nボクセルで製作した攻撃ヘリ3Dモデルです。\n実際のヨーロッパ連合で使用されているEurocopter Tiger 攻撃ヘリをモチーフにしました。\n自由に使ってください。\n\n[EN]\nVoxel Helicopter - Tiger\nA 3D Attack Helicopter Model made with VOXEL.\nMotivated from Eurocopter Tiger, used by European Union.\nFeel Free to Use it.\n\n[KR]\n복셀 헬리콥터 - 타이거\n복셀로 제작한 3D 공격헬기입니다.\n유럽 연합의 유로콥터 타이거 공격헬기가 모티브입니다.\n자유롭게 사용해 주세요.","url":"https://booth.pm/ja/items/1265091","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/848234c6-c7ff-4b68-9cb5-1d1c77651f0a/i/1265091/db6c68d1-0a79-439f-8d71-176ef5f9209d_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="FZKwMU8ojVkzbOJUpYJKPHlEjDZuhV3vJRgE294tfLk="></script>
+    nonce="QsHhOpF9vn2JPdy6WIss1wZ3xJxw3k3hOHxquUizbIw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -397,9 +397,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
