updated at: 2023-07-31 23:47, 『キッシュ』用髪型セット2 - むたちゃんねる販売所 - BOOTH

--- a/VRChat/47/1263647.html
+++ b/VRChat/47/1263647.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "rGJrwUQjAYz9pfNGYTCOrEqzFmsgxWSfGFiyUv7d7r0="></script>
+    "qLIiITEAQasjpQW2nR0vW4/obdJAIuuMpHtDWI2kcRc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"『キッシュ』用髪型セット2","description":"##モデル説明##\n『キッシュ』用髪型セット2\n※キッシュ本体、帽子等は付属しません。\n※モデル説明の下に利用規約が記載されていますので、ご了承の上での購入をお願いします。\n\n#内容物\n・Hair_TypeF.fbx\n・Hair_TypeG.fbx\n・Hair_TypeH.fbx\n・Hair_TypeI.fbx\n・Hair_TypeJ.fbx\n・Hair_TypeK.fbx\n・Tail.fbx\n　それぞれの髪型データとバージョン1に移植するための尻尾のデータです。\n　見た目についてはReadme内の髪型一覧.pngを確認してください。\n\n・hair.png\n　髪のテクスチャです。\n\n#モデルについて\n　『キッシュ』用髪型セットとしてボーンのセットアップされた髪型のデータが6種類含まれています。\n　※本体モデル『キッシュ』はこのデータに含まれておりません。\n　Tail.fbxについては、バージョン1の場合髪と尻尾のメッシュが別れていないので、導入時に新たに追加する必要があります。\nシェーダーで両面表示推奨です。\n\n#導入方法について\n　Readme内の髪型移植方法.pngを確認してください。\n\n#『キッシュ』以外での使用について\n　利用規約通り改造の範囲内として問題ありませんが、そういった改造が許可されたモデルにのみ導入してください。\n","url":"https://booth.pm/ja/items/1263647","offers":{"priceCurrency":"JPY","@type":"Offer","price":"600"},"image":"https://booth.pximg.net/c/620x620/10942f35-97bb-434d-9f5a-6083e00c7891/i/1263647/8dc5280b-ca78-478f-ac85-b7e68d31eff7_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="rGJrwUQjAYz9pfNGYTCOrEqzFmsgxWSfGFiyUv7d7r0="></script>
+    nonce="qLIiITEAQasjpQW2nR0vW4/obdJAIuuMpHtDWI2kcRc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -169,7 +169,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      1358
+                                      1359
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -185,7 +185,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      1358
+                                      1359
                                     </div>
                                   </div></a>
                                 </div>
@@ -593,9 +593,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
