updated at: 2023-07-31 23:47, オリジナル3Dモデル『リンツ』 - むたちゃんねる販売所 - BOOTH

--- a/VRChat/64/1255264.html
+++ b/VRChat/64/1255264.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "IJf3ttv14EKjIx0TvQhTJXFrQacT4a2F3RkRoJpCN9A="></script>
+    "tJY0VrQZ9/H5qLoicsA2265+U5qKi4btysKYMMwdhiE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル『リンツ』","description":"##モデル説明##\n\n#内容物\n・CornetUnitypackage\n　ダイナミックボーン、マテリアル、VRChat用コンポーネント設定済みのprefabが含まれるUnitypackageです。\n　PSD、FBXデータも含まれています。\n\n・PSDフォルダ\n　改変用のPSDデータが入っています。\n\n・FBXフォルダ\n　改変用のFBXデータが入っています。\n\n#ボーンについて\nUnityのHumanoidの規則に沿った作りになっています。\nHumanoid切り替え時に自動で設定されますが、Chestがアサインされないので手動でアサインし、\nJawに不要なボーンがアサインされるので外してください。\n\n#マテリアル設定\nhttps://booth.pm/ja/items/1723985\n本モデルはSunao Shaderを推奨しています。\nPrefabフォルダに設定済みのものがありますので、予めSunao Shaderの導入をお願いします。\n\n#DynamicBoneについて\n付属Unitypackageで設定済みのものがありますので、予めDynamicBoneの導入をお願いします。\n\n#モーフについて\nVRChat用のリップシンクが設定がされています。\n自動瞬きに関してはダミーデータが設定されています。\n表情用に目、眉、口、オプションでそれぞれ分かれているので組み合わせて使用してください。\n\n#VRChatのフルトラッキングについて\nアップロード時に注意表記が出ますがフルトラッキングに対応しています。\n\n#Blenderで編集する場合の注意点\nこのデータはMayaで作られたものですので、Blenderでfbxを読み込むとシェイプキーの順番がバラバラになります。\nBlender編集時.pngを参考に修正をお願いします。\nhttps://kumattass.booth.pm/items/1020668\nひまくま(kumatta_ss)さんの方で自動化アドオンを作成して頂いているのでそちらでも修正することができます。\n\n#VRChatSDK3.0対応\nPrefabフォルダにVRChatSDK3.0設定済みのものがあります。\n上着の脱着、帽子の脱着のギミックが設定してあります。\n\n--------------------------------------------------\n更新情報\n19/03/08 リリース \n19/03/21 尻尾のメッシュ、ボーンの名称を修正\n　　　　 改造用.psdの上着の襟の装飾がレイヤ分けされていなかったのを修正\n21/11/11 VRChatSDK3.0対応、フルトラッキング精度向上の為に肩、肘のボーンを調整。\n22/04/24 PhysBones対応。帽子を持てるようにボーン調整。前髪を伸ばせるように調整。","url":"https://booth.pm/ja/items/1255264","offers":{"priceCurrency":"JPY","@type":"Offer","price":"5000"},"image":"https://booth.pximg.net/c/620x620/10942f35-97bb-434d-9f5a-6083e00c7891/i/1255264/598f947e-d41c-492a-843d-9926e694ff67_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="IJf3ttv14EKjIx0TvQhTJXFrQacT4a2F3RkRoJpCN9A="></script>
+    nonce="tJY0VrQZ9/H5qLoicsA2265+U5qKi4btysKYMMwdhiE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -182,7 +182,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      1859
+                                      1860
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -198,7 +198,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      1859
+                                      1860
                                     </div>
                                   </div></a>
                                 </div>
@@ -625,9 +625,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
