updated at: 2023-07-31 23:47, VR用3Dモデル「2A-7/2ERO　(ニアナ/ニエロ装備)」 - 拾い部屋 - BOOTH

--- a/VRChat/08/1197108.html
+++ b/VRChat/08/1197108.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "b3d7bTkEtx2hWQfwbQKDz92X5a+PeRDxJDuSwZkZcN0="></script>
+    "Ra2Z70Nzv449b5bUNnwqXMhW9cJBJ66dutxdUqSmyXY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VR用3Dモデル「2A-7/2ERO　(ニアナ/ニエロ装備)」","description":"※ダイナミックボーン設定してる為、UNITY2018ではダイナミックボーンをインストールしていないとアップロードできない状態になってます。ダイナミックボーンの箇所を外すとアップロードできます。箇所に関しては質問していただければお返事します。\n\n★★★　2A-7用アイテム　★★★\n■ VRC用メカ外装「NK-2（ニクツ）」(われもの注意 様の作成)\n　　https://booth.pm/ja/items/1570497\n\n■ 2a7s用着せ替えメイド服\u003cVRChat想定モデル\u003e(えくれあ 様の作成)\n　　https://booth.pm/ja/items/1437043\n\n■ ニアナさん専用バニーさん向け燕尾服(Uraki/zephyrant 様の作成)\n　　https://u-q-t.booth.pm/items/1799744\n\n■ ビーチバレー風セパレートビキニ(Uraki/zephyrant 様の作成)\n　　https://u-q-t.booth.pm/items/1428366\n\n■ 競泳水着(Uraki/zephyrant 様の作成)\n　　https://u-q-t.booth.pm/items/1311140\n\n■ バニーさんなりきり小物セット(Uraki/zephyrant 様の作成)\n　　https://u-q-t.booth.pm/items/1542839\n\n■ ドレス＆フリルエプロン(Uraki/zephyrant 様の作成)\n　　https://u-q-t.booth.pm/items/1561890\n\n■ ニアナちゃん専用コスチューム詰め合わせ(ライヴァー 様の作成)\n　　https://raiverlonford.booth.pm/items/1390967\n\n■\u003c\u003c\u003c\u003c\u003c生足\u003e\u003e\u003e\u003e\u003e(さんかち 様)\n　　https://titanium-white.booth.pm/items/1398804\n\n―――――――――――――――――――――――――――\n\n※通常スペックのVRを想定したものです。\n※オキュラスクエストでの使用は想定されていません。\n\n―――――――――――――――――――――――――――\n\n3Dのキャラ素材としてご使用ください。\nワールドで使ったり、シェーダーで使ったりして、それを再配布しても問題ありません。\n\n\nこちらは　クリエイティブ・コモンズ・ライセンス　の　「CC BY 4.0」です。\n(簡単に言うと原作者のクレジット記載さえあれば、何をしてもOK)\nワールド作成の賑やかし、ペデスタル、メッシュの改造して再配布などVR創作活動にご利用しても問題ありません。\n\n「CC BY 4.0」の詳細はこちらのサイト参照\nhttps://creativecommons.org/licenses/by/4.0/deed.ja\n\n―――――――――――――――――――――――――――\n\n◇内容物\n・unitypakage\n・改造用の全メッシュの入ったFBX\n・改造用テクスチャ\n\n―――――――――――――――――――――――――――\n\nツイッターで「#ニアナ」で呟いてくれると嬉しいです。\nあと機能など更新事項など自分がそれでアナウンスするかもしれません。\n\n―――――――――――――――――――――――――――\n\n大きな不具合がない限り対応は難しいですが、\n導入など分からない点がありましたらお気軽に質問してください。\n(自分の分かる範囲になります)\n\n連絡先は、\n　ツイッター(gaku2_sigehiro)\n　メール(sigehiro_summer@hotmail.com)\nになります。\n\n―――――――――――――――――――――――――――\n\n本モデルで発生した問題は基本的に受け付けておりませんが、連絡いただければ大体なんか実装していますのでお気軽にどうぞ。\n致命的なバグなどがありましたら修正致します。","url":"https://booth.pm/ja/items/1197108","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/c4e47d12-5c33-4226-982f-4671e408c771/i/1197108/b3c947a6-5f5f-4b29-8a2d-1388c1c8d78f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="b3d7bTkEtx2hWQfwbQKDz92X5a+PeRDxJDuSwZkZcN0="></script>
+    nonce="Ra2Z70Nzv449b5bUNnwqXMhW9cJBJ66dutxdUqSmyXY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -182,7 +182,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      4338
+                                      4339
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -198,7 +198,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      4338
+                                      4339
                                     </div>
                                   </div></a>
                                 </div>
@@ -574,9 +574,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
