updated at: 2023-07-31 23:49, オリジナル３Dモデル「ロゼ」 - ともえすとあ - BOOTH

--- a/VRChat/22/1263422.html
+++ b/VRChat/22/1263422.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "kPa+pi7SkArk5V5AS1bAnKY7/Ngv6AXgcvw2RHL5NAE="></script>
+    "wEmVoYp7szGZYPOzbLZvfTWVdzroFeRwNvtuY7HW0j8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル３Dモデル「ロゼ」","description":"/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/\n2019/7/15　Rozet0715.zipに更新 水着衣装、VRM追加\n\n2019/3/07　Rozet0307.zip\n\n/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/_/\n\n\n名前は”ロゼ”です。ユニティちゃんトゥーンシェーダーを使わせていただきました。\n\n身長はヒール込で約162cmです。\nVRchatでのアバター評価は\"Poor\" になりました。\n※ DynamicBoneは設定済みです\n\nアーマーは、Unity上で非表示にもできるようにしてあります。好きな外観にしてお楽しみください。\n\n表情用のモーフはリップシンク含めて、60種類以上作成してあります。いろいろな表情が作れるかと思いますので、遊んでみてください。\n\n最後に、テクスチャ改変用のPSDも同梱してあります。画像編集ソフトが使える方はテクスチャの改変も試してみていただければと思います。","url":"https://booth.pm/ja/items/1263422","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/b5fe0720-4746-4c9c-9ca5-154c397d8bd5/i/1263422/619bdf0f-f6a7-4b63-a9dd-2a18c27ee001_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="kPa+pi7SkArk5V5AS1bAnKY7/Ngv6AXgcvw2RHL5NAE="></script>
+    nonce="wEmVoYp7szGZYPOzbLZvfTWVdzroFeRwNvtuY7HW0j8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -506,9 +506,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
