updated at: 2023-07-31 23:53, 3Dモデル『ルミナ』VRChat想定アバター - NullReference - BOOTH

--- a/VRChat/66/1263566.html
+++ b/VRChat/66/1263566.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "e9/DQPXFD7xULD/IJrPSHpH2Lk1XYZc7XW+8wkJLPrU="></script>
+    "54QFXj0j0R36nfWiCK+Z2zndooH7nU6Ff/CeIF8+kg4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデル『ルミナ』VRChat想定アバター","description":"VRChatアバター向けオリジナル3Dモデル\nルミナ(Lumina)\n\n　本モデルは、VRChatでのアバター利用を想定して作られたモデルです。(Unity標準Humanoid型)\n　付属のパッケージをUnityに導入する前に、VRC_SDKの導入が必要です。\n　VRC_SDKが導入されていれば、付属のパッケージを導入するだけでアップロードの準備が完了します。\n\n　本モデルデータ、及びテクスチャデータの改変は、各自の責任のもと、ご自由に行って頂いて問題ありません。\n\n　動作確認は、VRChat上でのデスクトップモード、VRモード、フルトラッキングVRモード(コントローラ2つ+トラッカー3つ)で行っています。\n\n◆同梱ファイル\n　UnityPackage(インポートしてSceneファイルを開くだけで、VRChatにアップロード可能な状態になります。\n　fbxファイル\n　テクスチャーファイル\n　psdファイル(uvを表示したレイヤー等が含まれています。色改変等にご利用下さい)\n　Textファイル(説明書及び利用規約の「ReadMe」.txtです)\n\n◆その他\n　VRChat向けに表情をいくつかアニメーションオーバーライドで設定済みです。お好みに合わせて改変してください。\n　デフォルト身長約147cm(帽子含む)\n　Unity上でいくつかのパーツを外せます。\n　フル装備でのポリゴン数は約19712ポリゴン。\n　リップシンク15種設定済み。\n　アイトラッキングを設定済みです。\n　表情変更用のシェイプキーがあり、組み合わせて表情が作れます。\n\n\n　Packageに同梱されている「ArkToonShader1.0.0.0」は、MITライセンスのガイドラインに則った形で使用しております。\n　Packageに同梱されている「ユニティちゃんトゥーンシェーダー Ver.2.0.5」は、UCL2.0(ユニティちゃんライセンス)に則った形で使用しております。\n　","url":"https://booth.pm/ja/items/1263566","offers":{"priceCurrency":"JPY","@type":"Offer","price":"4500"},"image":"https://booth.pximg.net/c/620x620/947de320-3fbe-4c49-8a33-54211b03d19e/i/1263566/0150ef7b-37c8-4557-8bdc-8ac9d45bc510_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="e9/DQPXFD7xULD/IJrPSHpH2Lk1XYZc7XW+8wkJLPrU="></script>
+    nonce="54QFXj0j0R36nfWiCK+Z2zndooH7nU6Ff/CeIF8+kg4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -531,9 +531,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
