updated at: 2023-07-31 23:53, 八重桜のコサージュとブローチ Sakura corsage and brooch - ちま屋 -Chimaya- - BOOTH

--- a/VRChat/33/1263833.html
+++ b/VRChat/33/1263833.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "56mSvY0UR9+TxCMkKKwco8FqxuuaoVf2UXv5I+ICtak="></script>
+    "o8pkomyDEqnHlejGjk9RdFVVb/v6luI0x0vOT4yja1E="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"八重桜のコサージュとブローチ Sakura corsage and brooch","description":"3Dモデルアクセサリー「八重桜のコサージュ」Sakura corsage\n\nコサージュ：1027ポリゴン\nブローチ：947ポリゴン\nシェーダー：UnlitWF\n\nカラーごとにprefab 対応\n\n\n洋服や帽子につけたり、髪飾りにしたりして\n自由に楽しんでくださいね！\n\n\n「コサージュのnatural」のみお試し版で無料です！\nアイテム設置の練習などにもお使いください。\n\n\n＜アップデート＞\n2022.02.22　シェーダーをUnlitWFに変更しました。\n2020.04.30　テクスチャ改変用にAlpha抜きPNGを追加しました。\n2019.11.19　全部パックにブローチを追加しました。\n2019.09.02　全部のバリエーションにClipping Maskを対応しました。以前のものと比べて少しアウトラインが入りますが、暗いところなどでの表示が綺麗になると思います。\n2019.08.13　Blackのテクスチャを修正・追加しました。それぞれのバリエーションごとにPrefabを作りました。","url":"https://booth.pm/ja/items/1263833","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/1f163e5b-a0e4-46e7-be27-4850d72c7bc9/i/1263833/d6580cac-ef6c-4c81-ab68-c4a4f0d10079_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="56mSvY0UR9+TxCMkKKwco8FqxuuaoVf2UXv5I+ICtak="></script>
+    nonce="o8pkomyDEqnHlejGjk9RdFVVb/v6luI0x0vOT4yja1E="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -172,7 +172,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      1605
+                                      1604
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -188,7 +188,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      1605
+                                      1604
                                     </div>
                                   </div></a>
                                 </div>
@@ -589,9 +589,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
